# Scotty

./: .gitignore  LICENSE  README.md
CAN_MOTORFIRMWARE_like_MIT/: .cproject  .gitignore  .mxproject  .project  CAN_MOTORFIRMWARE_like_MIT Debug.launch  CAN_MOTORFIRMWARE_like_MIT Debug_STM2_Front.launch  CAN_MOTORFIRMWARE_like_MIT.ioc  CAN_MOTORFIRMWARE_like_MIT.launch  DebugConfig_Check_STM_USED.launch  DebugConfig_STM1_BACK.launch  DebugConfig_STM2_FRONT.launch  TUT_CAN_F446 Debug.launch
CAN_MOTORFIRMWARE_like_MIT/.metadata/: .log4j.xml  version.ini
Extras/: GroundStation_TerminalHistory_Bckup.txt
HigherLevel_CheetahSoftware/: config_network_lcm.sh
Scotty_Champ/: README.md  Readme
Scotty_Champ/scotty_config/: CMakeLists.txt  README.md  config.json  package.xml
Scotty_Champ/scotty_config/config/gait/: gait.yaml
Scotty_Champ/scotty_config/config/joints/: joints.yaml
Scotty_Champ/scotty_config/config/links/: links.yaml
Scotty_Champ/scotty_config/config/ros_control/: ros_control.yaml
Scotty_Champ/scotty_config/include/: gait_config.h  quadruped_description.h
Scotty_Champ/scotty_config/launch/: bringup.launch  gazebo.launch  idleStart.launch  main_controller.launch  navigate.launch  scotty_controller.launch  slam.launch  spawn_robot.launch
Scotty_Champ/scotty_config/launch/include/: move_base.launch
Scotty_Champ/scotty_config/scripts/: controller_backend.py  emergency_stop.py  index.html  main_controller.py  scotty_controller_manager.py  stand_controller.py  state_down_controller.py  state_idle_startup.py  state_shutdown_controller.py  state_walk.py
(+145 files in other folders)
